--- a/net-libs/libisds/ChangeLog
+++ b/net-libs/libisds/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-libs/libisds
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/libisds/ChangeLog,v 1.12 2012/10/29 10:54:48 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/libisds/ChangeLog,v 1.13 2012/10/29 13:35:36 scarabeus Exp $
+
+*libisds-0.6-r1 (29 Oct 2012)
+
+  29 Oct 2012; Tomáš Chvátal <scarabeus@gentoo.org> +libisds-0.6-r1.ebuild,
+  -libisds-0.6.ebuild, libisds-9999.ebuild:
+  Add define for reauthorisation bug.
 
 *libisds-0.6 (29 Oct 2012)
 
