--- a/sys-cluster/corosync/ChangeLog
+++ b/sys-cluster/corosync/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for sys-cluster/corosync
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-cluster/corosync/ChangeLog,v 1.24 2012/10/29 13:41:52 ultrabug Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-cluster/corosync/ChangeLog,v 1.25 2012/10/29 13:56:21 ultrabug Exp $
+
+*corosync-1.4.4 (29 Oct 2012)
+
+  29 Oct 2012; Ultrabug <ultrabug@gentoo.org> +corosync-1.4.4.ebuild:
+  Version bump of corosync-1 series
 
 *corosync-2.1.0 (29 Oct 2012)
 
