--- a/dev-libs/fcgi/ChangeLog
+++ b/dev-libs/fcgi/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-libs/fcgi
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/fcgi/ChangeLog,v 1.56 2012/10/29 06:59:19 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/fcgi/ChangeLog,v 1.57 2012/10/29 15:00:44 ottxor Exp $
+
+*fcgi-2.4.1_pre0910052249-r1 (29 Oct 2012)
+
+  29 Oct 2012; Christoph Junghans <ottxor@gentoo.org>
+  +fcgi-2.4.1_pre0910052249-r1.ebuild:
+  added prefix support (bug #440070)
 
   29 Oct 2012; Hans de Graaff <graaff@gentoo.org>
   -fcgi-2.4.1_pre0311112127.ebuild:
@@ -210,4 +216,3 @@
 
   04 Sep 2003; Matthew Kennedy <mkennedy@gentoo.org> :
   Initial import.
-
