--- a/sys-cluster/cluster-glue/ChangeLog
+++ b/sys-cluster/cluster-glue/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sys-cluster/cluster-glue
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-cluster/cluster-glue/ChangeLog,v 1.27 2012/10/29 12:21:30 ultrabug Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-cluster/cluster-glue/ChangeLog,v 1.28 2012/10/29 16:07:08 ultrabug Exp $
+
+  29 Oct 2012; Ultrabug <ultrabug@gentoo.org> cluster-glue-1.0.10.ebuild,
+  cluster-glue-1.0.11.ebuild:
+  Disable obsolete heartbeat-logd init script installation wrt #433359.
 
 *cluster-glue-1.0.11 (29 Oct 2012)
 
