--- a/net-misc/shigofumi/ChangeLog
+++ b/net-misc/shigofumi/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-misc/shigofumi
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/shigofumi/ChangeLog,v 1.7 2012/10/29 11:16:28 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/shigofumi/ChangeLog,v 1.8 2012/10/29 17:57:18 zmedico Exp $
+
+  29 Oct 2012; Zac Medico <zmedico@gentoo.org> shigofumi-0.2.ebuild,
+  shigofumi-9999.ebuild:
+  Tweak inherit so repoman can parse it.
 
 *shigofumi-0.2 (29 Oct 2012)
 
