--- a/sys-cluster/cluster-glue/ChangeLog
+++ b/sys-cluster/cluster-glue/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-cluster/cluster-glue
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-cluster/cluster-glue/ChangeLog,v 1.28 2012/10/29 16:07:08 ultrabug Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-cluster/cluster-glue/ChangeLog,v 1.29 2012/10/29 18:19:50 ago Exp $
+
+  29 Oct 2012; <ago@gentoo.org> cluster-glue-1.0.10.ebuild:
+  Stable for amd64, wrt bug #433359
 
   29 Oct 2012; Ultrabug <ultrabug@gentoo.org> cluster-glue-1.0.10.ebuild,
   cluster-glue-1.0.11.ebuild:
