--- a/sys-kernel/gentoo-sources/ChangeLog
+++ b/sys-kernel/gentoo-sources/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/gentoo-sources
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/gentoo-sources/ChangeLog,v 1.1029 2012/10/29 15:36:39 mpagano Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/gentoo-sources/ChangeLog,v 1.1030 2012/10/29 18:32:21 mpagano Exp $
+
+*gentoo-sources-3.0.49 (29 Oct 2012)
+
+  29 Oct 2012; Michael Pagano <mpagano@gentoo.org>
+  +gentoo-sources-3.0.49.ebuild:
+  Linux patches 3.0.47, 3.0.48 and 3.0.49. Removal of redundant patch
 
 *gentoo-sources-3.6.4 (29 Oct 2012)
 
