--- a/www-servers/uwsgi/ChangeLog
+++ b/www-servers/uwsgi/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for www-servers/uwsgi
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-servers/uwsgi/ChangeLog,v 1.28 2012/09/10 09:47:52 dev-zero Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-servers/uwsgi/ChangeLog,v 1.29 2012/10/29 18:58:05 ultrabug Exp $
+
+*uwsgi-1.3 (29 Oct 2012)
+
+  29 Oct 2012; Ultrabug <ultrabug@gentoo.org> -uwsgi-1.2.3-r4.ebuild,
+  +uwsgi-1.3.ebuild:
+  Version bump, drop old.
 
 *uwsgi-1.2.6 (10 Sep 2012)
 
