--- a/profiles/arch/powerpc/ChangeLog
+++ b/profiles/arch/powerpc/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for Gentoo/PPC profile directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/arch/powerpc/ChangeLog,v 1.190 2012/10/29 07:10:21 cardoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/arch/powerpc/ChangeLog,v 1.191 2012/10/29 20:12:30 cardoe Exp $
+
+  29 Oct 2012; Doug Goldstein <cardoe@gentoo.org> +ppc64/package.use.force:
+  Add package.use.force for ppc64 as it requires binary only SeaBIOS (x86 BIOS)
+  since it can't natively compile it.
 
   29 Oct 2012; Doug Goldstein <cardoe@gentoo.org> +package.use,
   +ppc64/package.use:
