--- a/sys-firmware/seabios/ChangeLog
+++ b/sys-firmware/seabios/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-firmware/seabios
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-firmware/seabios/ChangeLog,v 1.6 2012/10/29 20:06:10 cardoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-firmware/seabios/ChangeLog,v 1.7 2012/10/29 22:35:37 cardoe Exp $
+
+  29 Oct 2012; Doug Goldstein <cardoe@gentoo.org> seabios-1.7.1.ebuild:
+  Fix my total breakage
 
 *seabios-1.7.1 (29 Oct 2012)
 
