--- a/sys-fs/btrfs-progs/ChangeLog
+++ b/sys-fs/btrfs-progs/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-fs/btrfs-progs
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/btrfs-progs/ChangeLog,v 1.53 2012/10/17 03:34:08 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/btrfs-progs/ChangeLog,v 1.54 2012/10/30 02:51:09 floppym Exp $
+
+  30 Oct 2012; Mike Gilbert <floppym@gentoo.org> metadata.xml:
+  Add myself to metadata.xml per Joe's invitation.
 
   17 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
   btrfs-progs-0.19.11.ebuild:
