--- a/app-emulation/libvirt/ChangeLog
+++ b/app-emulation/libvirt/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-emulation/libvirt
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/libvirt/ChangeLog,v 1.228 2012/10/30 05:17:42 cardoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/libvirt/ChangeLog,v 1.229 2012/10/30 05:49:45 cardoe Exp $
+
+  30 Oct 2012; Doug Goldstein <cardoe@gentoo.org> libvirt-9999.ebuild:
+  Update the live ebuild.
 
   30 Oct 2012; Doug Goldstein <cardoe@gentoo.org> libvirt-0.10.2.1.ebuild,
   files/libvirtd.init-r10:
