--- a/dev-python/pry/ChangeLog
+++ b/dev-python/pry/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/pry
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pry/ChangeLog,v 1.1 2012/03/24 23:36:00 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pry/ChangeLog,v 1.2 2012/10/30 08:06:38 radhermit Exp $
+
+*pry-0.2.1 (30 Oct 2012)
+
+  30 Oct 2012; Tim Harder <radhermit@gentoo.org> +pry-0.2.1.ebuild:
+  Add official release and mask dev-ruby/pry (bug #430536).
 
 *pry-0.2.1_p20090810 (24 Mar 2012)
 
