--- a/dev-python/pry/ChangeLog
+++ b/dev-python/pry/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/pry
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pry/ChangeLog,v 1.2 2012/10/30 08:06:38 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pry/ChangeLog,v 1.3 2012/10/30 08:07:49 radhermit Exp $
+
+  30 Oct 2012; Tim Harder <radhermit@gentoo.org> -pry-0.2.1_p20090810.ebuild:
+  Remove old snapshot version.
 
 *pry-0.2.1 (30 Oct 2012)
 
