--- a/net-libs/libisds/ChangeLog
+++ b/net-libs/libisds/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-libs/libisds
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/libisds/ChangeLog,v 1.14 2012/10/30 10:07:49 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/libisds/ChangeLog,v 1.15 2012/10/30 11:15:26 blueness Exp $
+
+  30 Oct 2012; Anthony G. Basile <blueness@gentoo.org> libisds-0.6.1.ebuild,
+  libisds-9999.ebuild:
+  Keyword ~mips, requested by scarabeus
 
 *libisds-0.6.1 (30 Oct 2012)
 
