--- a/app-emulation/libvirt/ChangeLog
+++ b/app-emulation/libvirt/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-emulation/libvirt
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/libvirt/ChangeLog,v 1.229 2012/10/30 05:49:45 cardoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/libvirt/ChangeLog,v 1.230 2012/10/30 12:01:54 ago Exp $
+
+  30 Oct 2012; <ago@gentoo.org> libvirt-0.10.2-r3.ebuild:
+  Stable for amd64, wrt bug #439298
 
   30 Oct 2012; Doug Goldstein <cardoe@gentoo.org> libvirt-9999.ebuild:
   Update the live ebuild.
