--- a/x11-misc/xscreensaver/ChangeLog
+++ b/x11-misc/xscreensaver/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/xscreensaver
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/xscreensaver/ChangeLog,v 1.319 2012/10/29 21:52:01 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/xscreensaver/ChangeLog,v 1.320 2012/10/30 16:07:38 jer Exp $
+
+  30 Oct 2012; Jeroen Roovers <jer@gentoo.org> xscreensaver-5.20.ebuild:
+  Stable for HPPA (bug #439146).
 
   29 Oct 2012; Anthony G. Basile <blueness@gentoo.org> xscreensaver-5.20.ebuild:
   stable ppc, bug #439146
