--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,10 +1,15 @@
 # ChangeLog for profile directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7080 2012/10/30 14:46:20 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7081 2012/10/30 17:33:16 blueness Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  30 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
+  arch/powerpc/ppc64/package.use.mask:
+  Mask new-login on x11-misc/xscreensaver for ppc64, bug #439146
+
 
   30 Oct 2012; Diego E. Pettenò <flameeyes@gentoo.org> package.mask:
   Mask libtasn1 together with GnuTLS 3.
