--- a/mail-filter/postgrey/ChangeLog
+++ b/mail-filter/postgrey/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for mail-filter/postgrey
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-filter/postgrey/ChangeLog,v 1.77 2012/10/24 10:00:46 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-filter/postgrey/ChangeLog,v 1.78 2012/10/30 17:33:33 jer Exp $
+
+  30 Oct 2012; Jeroen Roovers <jer@gentoo.org> postgrey-1.34-r1.ebuild:
+  Stable for HPPA (bug #439066).
 
   24 Oct 2012; <ago@gentoo.org> postgrey-1.34-r1.ebuild:
   Stable for amd64, wrt bug #439066
