--- a/profiles/prefix/ChangeLog
+++ b/profiles/prefix/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for profiles/prefix
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/prefix/ChangeLog,v 1.365 2012/10/27 12:52:11 grobian Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/prefix/ChangeLog,v 1.366 2012/10/30 17:50:49 grobian Exp $
+
+  30 Oct 2012; Fabian Groffen <grobian@gentoo.org>
+  darwin/macos/10.5/make.defaults, darwin/macos/10.6/make.defaults,
+  darwin/macos/10.7/make.defaults, darwin/macos/10.8/make.defaults:
+  Enable sandbox (seatbelt) on Mac OS X >=10.5
 
   27 Oct 2012; Fabian Groffen <grobian@gentoo.org> package.mask:
   Mask sys-apps/coreutils-8.20 due to parallel make and libiconv issues
